--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -27,6 +27,7 @@
     <iframe src="knockback_triggered_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_view_model/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="backbone_modelref/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="backbone_relational/test-latest.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
     <h1 class="qunit-header">Interactive Tests (Legacy Knockout-1.2.1.js and Backbone-0.9.1.js)</h1>
@@ -42,6 +43,7 @@
     <iframe src="knockback_triggered_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_view_model/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="backbone_modelref/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="backbone_relational/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
   </div>
 </body>
 </html>
