--- a/test/backbone_relational/test-legacy_ko-1.2.1_bb-0.9.1.html
+++ b/test/backbone_relational/test-legacy_ko-1.2.1_bb-0.9.1.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback with Backbone.ModelRef Test Suite</h1>
+    <h1 id="qunit-header">Knockback with Backbone.Relational Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
