Major refactor to prepare for customized nested view model creation and added kb.utils to be more similar to Knockout conventions

--- a/test/knockback_formatted_observable/test-latest.html
+++ b/test/knockback_formatted_observable/test-latest.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback.ForamttedObservable Test Suite</title>
+  <title>Knockback.FormattedObservable Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../dependencies/knockout-2.0.0.debug.js"></script>
   <script type="text/javascript" src="../../dependencies/underscore.js"></script>
@@ -25,7 +25,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback.ForamttedObservable Test Suite</h1>
+    <h1 id="qunit-header">Knockback.FormattedObservable Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
