--- a/test/knockback_packaging/test-latest.html
+++ b/test/knockback_packaging/test-latest.html
@@ -1,14 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback Core Test Suite</title>
+  <title>Knockback Packaging Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../dependencies/knockout-2.0.0.debug.js"></script>
   <script type="text/javascript" src="../../dependencies/underscore.js"></script>
   <script type="text/javascript" src="../../dependencies/backbone-0.9.2.js"></script>
 
   <!-- HELPERS -->
-  <script type="text/javascript" src="../vendor/backbone-relational.js"></script>
+  <script type="text/javascript" src="../../examples_lib/build/examples_lib.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
 
   <script type="text/javascript">
     window.mock_requires = {};
@@ -37,11 +40,11 @@
   <script type="text/javascript" src="../vendor/qunit/qunit.js"></script>
   <script type="text/javascript" src="../vendor/qunit/jslitmus.js"></script>
   <script type="text/javascript" src="../knockback_observable/build/test.js"></script>
-  <script type="text/javascript" src="../backbone_relational/build/test.js"></script>
+  <script type="text/javascript" src="../knockback_view_model/build/test.js"></script>
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback Core Test Suite</h1>
+    <h1 id="qunit-header">Knockback Packaging Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
