--- a/test/knockback_legacy/test-latest.html
+++ b/test/knockback_legacy/test-latest.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback Core Test Suite</title>
+  <title>Knockback Legacy Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../dependencies/knockout-1.2.1.debug.js"></script>
+  <script type="text/javascript" src="../../dependencies/knockout-2.0.0.debug.js"></script>
   <script type="text/javascript" src="../../dependencies/underscore.js"></script>
-  <script type="text/javascript" src="../../dependencies/backbone-0.9.1.js"></script>
+  <script type="text/javascript" src="../../dependencies/backbone-0.9.2.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback Core Test Suite</h1>
+    <h1 id="qunit-header">Knockback Legacy Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
