--- a/test/knockback_memory_management/test-latest.html
+++ b/test/knockback_memory_management/test-latest.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback Core Test Suite</title>
+  <title>Knockback Memory Management Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../dependencies/knockout-2.0.0.debug.js"></script>
   <script type="text/javascript" src="../../dependencies/underscore.js"></script>
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="../../knockback.js"></script>
 
   <!-- HELPERS -->
-  <script type="text/javascript" src="../../examples_lib/build/examples_lib.js"></script>
+  <script type="text/javascript" src="../vendor/backbone-relational.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback Core Test Suite</h1>
+    <h1 id="qunit-header">Knockback Memory Management Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
