--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -22,6 +22,7 @@
     <iframe src="knockback_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_collection_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_view_model/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_view_model_min/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_utils/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_legacy/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_observables/test-latest.html" scrolling="auto" frameborder="0"></iframe>
@@ -42,6 +43,7 @@
     <iframe src="knockback_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_collection_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_view_model/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_view_model_min/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_utils/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_legacy/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_observables/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
