--- a/test/backbone_modelref/test-legacy_ko-1.2.1_bb-0.9.1.html
+++ b/test/backbone_modelref/test-legacy_ko-1.2.1_bb-0.9.1.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="../../dependencies/knockout-1.2.1.debug.js"></script>
   <script type="text/javascript" src="../../dependencies/underscore.js"></script>
   <script type="text/javascript" src="../../dependencies/backbone-0.9.1.js"></script>
-  <script type="text/javascript" src="../../dependencies/optional/backbone-modelref.js"></script>
+  <script type="text/javascript" src="../../dependencies/optional/backbone-modelref.min.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
