--- a/test/interactive/test-latest.html
+++ b/test/interactive/test-latest.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="../../dependencies/knockout-2.1.0.debug.js"></script>
     <script type="text/javascript" src="../../dependencies/underscore.js"></script>
     <script type="text/javascript" src="../../dependencies/backbone-0.9.2.js"></script>
-    <script type="text/javascript" src="../../dependencies/optional/backbone-modelref.js"></script>
+    <script type="text/javascript" src="../../dependencies/optional/backbone-modelref.min.js"></script>
 
     <!-- LIBRARY -->
     <script type="text/javascript" src="../../knockback.js"></script>
