--- a/test/knockback_view_model_min/test-legacy_ko-1.2.1_bb-0.9.1.html
+++ b/test/knockback_view_model_min/test-legacy_ko-1.2.1_bb-0.9.1.html
@@ -1,15 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback with Backbone.ModelRef Test Suite</title>
+  <title>Knockback.ViewModel (Production) Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../dependencies/knockout-2.1.0.debug.js"></script>
+  <script type="text/javascript" src="../../dependencies/knockout-1.2.1.debug.js"></script>
   <script type="text/javascript" src="../../dependencies/underscore.js"></script>
-  <script type="text/javascript" src="../../dependencies/backbone-0.9.2.js"></script>
-  <script type="text/javascript" src="../../dependencies/optional/backbone-modelref.min.js"></script>
+  <script type="text/javascript" src="../../dependencies/backbone-0.9.1.js"></script>
 
   <!-- LIBRARY -->
-  <script type="text/javascript" src="../../knockback.js"></script>
+  <script type="text/javascript" src="../../knockback.min.js"></script>
 
   <!-- HELPERS -->
   <script type="text/javascript" src="../../examples_lib/build/examples_lib.js"></script>
@@ -26,7 +25,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback with Backbone.ModelRef Test Suite</h1>
+    <h1 id="qunit-header">Knockback.ViewModel (Production) Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
