--- a/tutorial_relational_models.html
+++ b/tutorial_relational_models.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html><html><head><meta http-equiv="Content-Type" content="text/html;charset=utf-8"><title>Knockback.js Tutorial: Relational Models</title><link rel="stylesheet" href="vendor/stylesheets/bootstrap.min.css"><link rel="stylesheet" href="stylesheets/layout.css"><link rel="stylesheet" href="stylesheets/layout_components.css"><script type="application/javascript" src="vendor/javascripts/jquery-1.7.2.js"></script><link rel="stylesheet" href="stylesheets/tutorial.css"><script type="application/javascript" src="vendor/javascripts/knockout-2.1.0.debug.js"></script><script type="application/javascript" src="vendor/javascripts/underscore-1.3.1.js"></script><script type="application/javascript" src="vendor/javascripts/backbone-0.9.2.js"></script><script type="application/javascript" src="vendor/javascripts/knockback-0.15.1.js"></script><script type="application/javascript" src="vendor/javascripts/backbone-relational-0.5.0.js"></script><link rel="stylesheet" href="vendor/lib/highlight/highlightjs/stylesheets/dark.css"><script type="application/javascript" src="vendor/lib/highlight/highlightjs/highlight.js"></script><script type="application/javascript" src="vendor/lib/highlight/highlightjs/languages/javascript.js"></script><script type="application/javascript" src="vendor/lib/highlight/highlight-coffee.js"></script><script type="application/javascript" src="vendor/javascripts/bootstrap.js"></script><script type="application/javascript" src="javascripts/interface.js"></script><script type="application/javascript">hljs.tabReplace = '  ';
-hljs.initHighlightingOnLoad();</script></head><body><div id="wrap"><div class="page navbar"><div class="navbar page"><div class="navbar-inner"><div class="container"><a class="brand kb">Knockback.js</a><ul class="nav"><li><a href="index.html">Home</a></li><li><a href="tutorial_getting_started.html">Getting Started</a></li><li><a href="docs.html">Docs</a></li><li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Tutorials<b class="caret"></b></a><ul class="dropdown-menu"><li></li><a href="tutorial_getting_started.html">Getting Started</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_todos.html">Todos</a></ul></li><li><a href="release_notes.html">Release Notes</a></li></ul><div id="script_language"><div class="separator"><div class="selection codestyle"><div class="option"><input id="cs-cs" type="radio" name="codestyle" value="cs" class="auto"/><label for="cs-cs">CoffeeScript</label></div><div class="option"><input id="cs-js" type="radio" name="codestyle" value="js"/><label for="cs-js">Javascript</label></div></div></div></div></div></div></div></div></div><div id="wrap"><div class="page container"><header class="page"></header><content class="page"><section><h1>Tutorial: Relational Models</h1><div><a href="index.html">Knockback.js</a><span> supports nested collections that you set up yourself or that are created by </span><a href="https://github.com/PaulUithol/Backbone-relational/">Backbone-Relational</a></div><p></p><h3>Backbone-Relational</h3><p></p><p>Let's look at an example from the Backbone-Relational site:</p><div class="container-fluid"><div class="row-fluid"><div class="span8"><h4>Views:</h4><pre>&lt;p&gt;First Person:
-  &lt;input data-bind=&quot;value: occupants()[0].name&quot;/&gt;
-  &lt;div&gt;(home: &lt;span data-bind=&quot;text: occupants()[0].livesIn().location&quot;&gt;&lt;/span&gt;)&lt;/div&gt;
-&lt;/p&gt;
-&lt;p&gt;Second Person:
-  &lt;input data-bind=&quot;value: occupants()[1].name&quot;/&gt;
-  &lt;div&gt;(home: &lt;span data-bind=&quot;text: occupants()[1].livesIn().location&quot;&gt;&lt;/span&gt;)&lt;/div&gt;
-&lt;/p&gt;
+hljs.initHighlightingOnLoad();</script></head><body><div id="wrap"><div class="page navbar"><div class="navbar page"><div class="navbar-inner"><div class="container"><a class="brand kb">Knockback.js</a><ul class="nav"><li><a href="index.html">Home</a></li><li><a href="tutorial_getting_started.html">Getting Started</a></li><li><a href="docs.html">Docs</a></li><li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Tutorials<b class="caret"></b></a><ul class="dropdown-menu"><li></li><a href="tutorial_getting_started.html">Getting Started</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_todos.html">Todos</a></ul></li><li><a href="release_notes.html">Release Notes</a></li></ul><div id="script_language"><div class="separator"><div class="selection codestyle"><div class="option"><input id="cs-cs" type="radio" name="codestyle" value="cs" class="auto"/><label for="cs-cs">CoffeeScript</label></div><div class="option"><input id="cs-js" type="radio" name="codestyle" value="js"/><label for="cs-js">Javascript</label></div></div></div></div></div></div></div></div></div><div id="wrap"><div class="page container"><header class="page"></header><content class="page"><section><h1>Tutorial: Relational Models</h1><div><a href="index.html">Knockback.js</a><span> supports nested collections that you set up yourself or that are created by </span><a href="https://github.com/PaulUithol/Backbone-relational/">Backbone-Relational</a></div><p></p><h3>Backbone-Relational</h3><p></p><p>Let's look at an example from the Backbone-Relational site:</p><div class="container-fluid"><div class="row-fluid"><div class="span8"><h4>Views:</h4><pre>&lt;div id='br_relational_models'&gt;
+  &lt;p&gt;First Person:
+    &lt;input data-bind=&quot;value: occupants()[0].name&quot;/&gt;
+    &lt;div&gt;(home: &lt;span data-bind=&quot;text: occupants()[0].livesIn().location&quot;&gt;&lt;/span&gt;)&lt;/div&gt;
+  &lt;/p&gt;
+  &lt;p&gt;Second Person:
+    &lt;input data-bind=&quot;value: occupants()[1].name&quot;/&gt;
+    &lt;div&gt;(home: &lt;span data-bind=&quot;text: occupants()[1].livesIn().location&quot;&gt;&lt;/span&gt;)&lt;/div&gt;
+  &lt;/p&gt;
 
-&lt;br/&gt;
+  &lt;br/&gt;
 
-&lt;div id='br_relational_models'&gt;
   &lt;p&gt;Location: &lt;input data-bind=&quot;value: location&quot;/&gt;&lt;/p&gt;
   &lt;p&gt;
     Has these people living there:
@@ -76,18 +76,18 @@ house = new House({
 view_model = kb.viewModel(house);
 
 ko.applyBindings(view_model, $('br_relational_models')[0]);
-</pre></div><div class="span4"><h4>Live Result</h4><div class="demos_result_box"><p>First Person:
-  <input data-bind="value: occupants()[0].name"/>
-  <div>(home: <span data-bind="text: occupants()[0].livesIn().location"></span>)</div>
-</p>
-<p>Second Person:
-  <input data-bind="value: occupants()[1].name"/>
-  <div>(home: <span data-bind="text: occupants()[1].livesIn().location"></span>)</div>
-</p>
+</pre></div><div class="span4"><h4>Live Result</h4><div class="demos_result_box"><div id='br_relational_models'>
+  <p>First Person:
+    <input data-bind="value: occupants()[0].name"/>
+    <div>(home: <span data-bind="text: occupants()[0].livesIn().location"></span>)</div>
+  </p>
+  <p>Second Person:
+    <input data-bind="value: occupants()[1].name"/>
+    <div>(home: <span data-bind="text: occupants()[1].livesIn().location"></span>)</div>
+  </p>
 
-<br/>
+  <br/>
 
-<div id='br_relational_models'>
   <p>Location: <input data-bind="value: location"/></p>
   <p>
     Has these people living there:
