--- a/test/knockback_packaging/test-legacy_ko-1.2.1_bb-0.9.1.html
+++ b/test/knockback_packaging/test-legacy_ko-1.2.1_bb-0.9.1.html
@@ -8,7 +8,6 @@
   <script type="text/javascript" src="../../dependencies/backbone-0.9.1.js"></script>
 
   <!-- HELPERS -->
-  <script type="text/javascript" src="../../examples_lib/build/examples_lib.js"></script>
   <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
   <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
   <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
@@ -27,7 +26,7 @@
   <script type="text/javascript" src="../../knockback.js"></script>
 
   <script type="text/javascript">
-    window.Knockback = window.kb = window.exports;
+    window.Knockback = window.kb = kb;
     delete window['exports'];
   </script>
 
