Moved /dependencies to /vendor to ignore Javascript files in GitHub ranking.

--- a/test/knockback_formatted_observable/test-legacy_ko-1.2.1_bb-0.9.1.html
+++ b/test/knockback_formatted_observable/test-legacy_ko-1.2.1_bb-0.9.1.html
@@ -3,9 +3,9 @@
 <head>
   <title>Knockback.FormattedObservable Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../dependencies/knockout-1.2.1.debug.js"></script>
-  <script type="text/javascript" src="../../dependencies/underscore.js"></script>
-  <script type="text/javascript" src="../../dependencies/backbone-0.9.1.js"></script>
+  <script type="text/javascript" src="../../vendor/knockout-1.2.1.debug.js"></script>
+  <script type="text/javascript" src="../../vendor/underscore.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-0.9.1.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
