--- a/test/interactive/test-latest.html
+++ b/test/interactive/test-latest.html
@@ -9,10 +9,10 @@
     <script type="text/javascript" src="../vendor/jquery.tmpl.js"></script>
 
     <!-- LIBRARY DEPENDENCIES -->
-    <script type="text/javascript" src="../../dependencies/knockout-2.1.0.debug.js"></script>
-    <script type="text/javascript" src="../../dependencies/underscore.js"></script>
-    <script type="text/javascript" src="../../dependencies/backbone-0.9.2.js"></script>
-    <script type="text/javascript" src="../../dependencies/optional/backbone-modelref.min.js"></script>
+    <script type="text/javascript" src="../../vendor/knockout-2.1.0.debug.js"></script>
+    <script type="text/javascript" src="../../vendor/underscore.js"></script>
+    <script type="text/javascript" src="../../vendor/backbone-0.9.2.js"></script>
+    <script type="text/javascript" src="../../vendor/optional/backbone-modelref.min.js"></script>
 
     <!-- LIBRARY -->
     <script type="text/javascript" src="../../knockback.js"></script>
