--- a/test/knockback_legacy/test-latest.html
+++ b/test/knockback_legacy/test-latest.html
@@ -3,9 +3,9 @@
 <head>
   <title>Knockback Legacy Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../dependencies/knockout-2.1.0.debug.js"></script>
-  <script type="text/javascript" src="../../dependencies/underscore.js"></script>
-  <script type="text/javascript" src="../../dependencies/backbone-0.9.2.js"></script>
+  <script type="text/javascript" src="../../vendor/knockout-2.1.0.debug.js"></script>
+  <script type="text/javascript" src="../../vendor/underscore.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-0.9.2.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
