--- a/test/interactive/test-legacy_ko-1.2.1_bb-0.9.1.html
+++ b/test/interactive/test-legacy_ko-1.2.1_bb-0.9.1.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="../../knockback.js"></script>
 
     <!-- HELPERS -->
-    <script type="text/javascript" src="../../examples_lib/build/examples_lib.js"></script>
+    <script type="text/javascript" src="../../test/_examples/build/_examples.js"></script>
     <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
     <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
@@ -71,9 +71,9 @@
     </script>
 
     <script type='text/javascript'>
-      <!-- SEE examples_lib for LocaleManager, Contact, ContactsCollection, and LongDateLocalizer -->
+      <!-- SEE _examples for LocaleManager, Contact, ContactsCollection, and LongDateLocalizer -->
 
-      kb.locale_manager = new LocaleManager('en', {
+      kb.locale_manager = new kb._.LocaleManager('en', {
         'en': {
           label_title_new: "New Contact",
           label_button_new: "Add",
@@ -90,7 +90,7 @@
           label_date: "Date de Naissance:"
         }
       });
-      var collection = new ContactsCollection([
+      var collection = new kb._.ContactsCollection([
         {name: 'Moe',   email: 'moe@3s.com',    date: new Date(1897, 6, 19)},
         {name: 'Larry', email: 'larry@3s.com',  date: new Date(1902, 10, 5)},
         {name: 'Curly', email: 'curly@3s.com',  date: new Date(1903, 10, 22)}
@@ -99,7 +99,7 @@
         available_languages:    ko.observableArray(['en', 'fr-FR']),
         new_name:               ko.observable(''),
         new_email:              ko.observable(''),
-        new_date:               new LongDateLocalizer(new Date()),
+        new_date:               new kb._.LongDateLocalizer(new Date()),
         onAdd:  function()      {
           collection.add({name: this.new_name(), email: this.new_email(), date: this.new_date.observedValue()});
           this.new_name(''); this.new_email(''); this.new_date(new Date());
@@ -127,7 +127,7 @@
         kb.observables(model, {
           name:           { key: 'name' },
           email:          { key: 'email' },
-          date:           { key: 'date', localizer: LongDateLocalizer }
+          date:           { key: 'date', localizer: kb._.LongDateLocalizer }
         }, this);
       };
       view_model.contacts = Knockback.collectionObservable(collection, {
