--- a/test/knockback_packaging/test-legacy_ko-1.2.1_bb-0.9.1.html
+++ b/test/knockback_packaging/test-legacy_ko-1.2.1_bb-0.9.1.html
@@ -26,12 +26,12 @@
   <script type="text/javascript" src="../../knockback.js"></script>
 
   <script type="text/javascript">
-    window.Knockback = window.kb = kb;
+    window.mock_requires['knockback'] = window.Knockback = window.kb = kb;
     delete window['exports'];
   </script>
 
   <!-- HELPERS -->
-  <script type="text/javascript" src="../../examples_lib/build/examples_lib.js"></script>
+  <script type="text/javascript" src="../../test/_examples/build/_examples.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
