Upgraded to easy-bake

--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -22,7 +22,7 @@
     <iframe src="knockback_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_collection_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_view_model/test-latest.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_view_model_min/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_view_model/test-latest.min.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_utils/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_observables/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_formatted_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
@@ -30,9 +30,10 @@
     <iframe src="knockback_triggered_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="backbone_modelref/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="backbone_relational/test-latest.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_packaging/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_memory_management/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_legacy/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="packaging/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="packaging/test-latest.min.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
     <h1 class="qunit-header">Interactive Tests (Legacy Knockout-1.2.1.js and Backbone-0.9.1.js)</h1>
@@ -43,7 +44,7 @@
     <iframe src="knockback_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_collection_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_view_model/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_view_model_min/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_view_model/test-legacy_ko-1.2.1_bb-0.9.1.min.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_utils/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_observables/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_formatted_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
@@ -51,9 +52,10 @@
     <iframe src="knockback_triggered_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="backbone_modelref/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="backbone_relational/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_packaging/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_memory_management/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_legacy/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="packaging/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="packaging/test-latest.min.html" scrolling="auto" frameborder="0"></iframe>
   </div>
 </body>
 </html>
