--- a/test/interactive/test-latest.html
+++ b/test/interactive/test-latest.html
@@ -10,7 +10,7 @@
 
     <!-- LIBRARY DEPENDENCIES -->
     <script type="text/javascript" src="../../vendor/knockout-2.1.0.debug.js"></script>
-    <script type="text/javascript" src="../../vendor/underscore.js"></script>
+    <script type="text/javascript" src="../../vendor/underscore-1.3.3.js"></script>
     <script type="text/javascript" src="../../vendor/backbone-0.9.2.js"></script>
     <script type="text/javascript" src="../../vendor/optional/backbone-modelref.min.js"></script>
 
