--- a/test/packaging/test-latest.min.html
+++ b/test/packaging/test-latest.min.html
@@ -3,9 +3,9 @@
 <head>
   <title>Knockback Packaging Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../vendor/knockout-1.2.1.debug.js"></script>
-  <script type="text/javascript" src="../../vendor/underscore.js"></script>
-  <script type="text/javascript" src="../../vendor/backbone-0.9.1.js"></script>
+  <script type="text/javascript" src="../../vendor/knockout-2.1.0.debug.js"></script>
+  <script type="text/javascript" src="../../vendor/underscore-1.3.3.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-0.9.2.js"></script>
 
   <!-- HELPERS -->
   <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
@@ -23,7 +23,7 @@
   </script>
 
   <!-- LIBRARY -->
-  <script type="text/javascript" src="../../knockback.js"></script>
+  <script type="text/javascript" src="../../knockback.min.js"></script>
 
   <script type="text/javascript">
     window.mock_requires['knockback'] = window.Knockback = window.kb = kb;
