--- a/test/packaging/test-legacy_ko-1.2.1_bb-0.9.1.min.html
+++ b/test/packaging/test-legacy_ko-1.2.1_bb-0.9.1.min.html
@@ -1,32 +1,49 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback with Backbone.ModelRef Test Suite</title>
+  <title>Knockback Packaging Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../vendor/knockout-1.2.1.debug.js"></script>
   <script type="text/javascript" src="../../vendor/underscore-1.3.3.js"></script>
   <script type="text/javascript" src="../../vendor/backbone-0.9.1.js"></script>
-  <script type="text/javascript" src="../../vendor/optional/backbone-modelref.min.js"></script>
-
-  <!-- LIBRARY -->
-  <script type="text/javascript" src="../../knockback.js"></script>
 
   <!-- HELPERS -->
-  <script type="text/javascript" src="../../test/_examples/build/_examples.js"></script>
   <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
   <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
   <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
+
+  <script type="text/javascript">
+    window.mock_requires = {};
+    window.mock_requires['underscore'] = window._; delete window['_'];
+    window.mock_requires['backbone'] = window.Backbone; delete window['Backbone'];
+    window.mock_requires['knockout'] = window.ko; delete window['ko'];
+
+    window.require = function(path) { return window.mock_requires[path]; };
+    window.exports = {};
+  </script>
+
+  <!-- LIBRARY -->
+  <script type="text/javascript" src="../../knockback.min.js"></script>
+
+  <script type="text/javascript">
+    window.mock_requires['knockback'] = window.Knockback = window.kb = kb;
+    delete window['exports'];
+  </script>
+
+  <!-- HELPERS -->
+  <script type="text/javascript" src="../../test/_examples/build/_examples.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
   <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
   <script type="text/javascript" src="../vendor/qunit/qunit.js"></script>
   <script type="text/javascript" src="../vendor/qunit/jslitmus.js"></script>
-  <script type="text/javascript" src="build/test.js"></script>
+  <script type="text/javascript" src="../knockback_observable/build/test.js"></script>
+  <script type="text/javascript" src="../knockback_view_model/build/test.js"></script>
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback with Backbone.ModelRef Test Suite</h1>
+    <h1 id="qunit-header">Knockback Packaging Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
