Upgraded easy-bake and legacy tests

--- a/test/backbone_modelref/test-latest.html
+++ b/test/backbone_modelref/test-latest.html
@@ -4,9 +4,9 @@
   <title>Knockback with Backbone.ModelRef Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../vendor/knockout-2.1.0.debug.js"></script>
-  <script type="text/javascript" src="../../vendor/underscore.js"></script>
-  <script type="text/javascript" src="../../vendor/backbone.js"></script>
-  <script type="text/javascript" src="../../vendor/backbone-modelref.js"></script>
+  <script type="text/javascript" src="../../vendor/underscore-latest.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-latest.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-modelref-latest.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
