--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -14,11 +14,11 @@
 </head>
 <body>
   <div class="test-block">
-    <h1 class="qunit-header">Interactive Tests (Latest Knockout.js and Backbone.js)</h1>
+    <h1 class="qunit-header">Interactive Tests (Latest)</h1>
     <iframe class="full_width" src="interactive/test-latest.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
-    <h1 class="qunit-header">Knockback.js - All Tests (Latest Knockout.js and Backbone.js)</h1>
+    <h1 class="qunit-header">Knockback.js - All Tests (Latest)</h1>
     <iframe src="knockback_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_collection_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_view_model/test-latest.html" scrolling="auto" frameborder="0"></iframe>
@@ -36,26 +36,22 @@
     <iframe src="packaging/test-latest.min.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
-    <h1 class="qunit-header">Interactive Tests (Legacy Knockout-1.2.1.js and Backbone-0.9.1.js)</h1>
-    <iframe class="full_width" src="interactive/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
+    <h1 class="qunit-header">Interactive Tests (Legacy)</h1>
+    <iframe class="full_width" src="interactive/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
-    <h1 class="qunit-header">Knockback.js - All Tests (Legacy Knockout-1.2.1.js and Backbone-0.9.1.js)</h1>
-    <iframe src="knockback_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_collection_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_view_model/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_view_model/test-legacy_ko-1.2.1_bb-0.9.1.min.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_utils/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_observables/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_formatted_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_localized_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_triggered_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="backbone_modelref/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="backbone_relational/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_memory_management/test-latest.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_legacy/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="packaging/test-latest.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="packaging/test-latest.min.html" scrolling="auto" frameborder="0"></iframe>
+    <h1 class="qunit-header">Knockback.js - All Tests (Legacy)</h1>
+    <iframe src="knockback_observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_collection_observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_view_model/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_utils/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_observables/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_formatted_observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_localized_observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_triggered_observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="backbone_modelref/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_legacy/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="packaging/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
   </div>
 </body>
 </html>
