--- a/test/interactive/test-legacy.html
+++ b/test/interactive/test-legacy.html
@@ -10,9 +10,9 @@
 
     <!-- LIBRARY DEPENDENCIES -->
     <script type="text/javascript" src="../../vendor/knockout-1.2.1.debug.js"></script>
-    <script type="text/javascript" src="../../vendor/underscore.js"></script>
-    <script type="text/javascript" src="../../vendor/backbone-0.9.1.js"></script>
-    <script type="text/javascript" src="../../vendor/backbone-modelref.js"></script>
+    <script type="text/javascript" src="../../vendor/underscore-1.1.7.js"></script>
+    <script type="text/javascript" src="../../vendor/backbone-0.5.0.js"></script>
+    <script type="text/javascript" src="../../vendor/backbone-modelref-latest.js"></script>
 
     <!-- LIBRARY -->
     <script type="text/javascript" src="../../knockback.js"></script>
