--- a/test/knockback_observable/test-legacy.html
+++ b/test/knockback_observable/test-legacy.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback with Backbone.Relational Test Suite</title>
+  <title>Knockback.Observable Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../vendor/knockout-1.2.1.debug.js"></script>
-  <script type="text/javascript" src="../../vendor/underscore.js"></script>
-  <script type="text/javascript" src="../../vendor/backbone-0.9.1.js"></script>
+  <script type="text/javascript" src="../../vendor/underscore-1.1.7.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-0.5.0.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
 
   <!-- HELPERS -->
-  <script type="text/javascript" src="../../vendor/backbone-relational-0.5.0.js"></script>
+  <script type="text/javascript" src="../../test/_examples/build/_examples.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback with Backbone.Relational Test Suite</h1>
+    <h1 id="qunit-header">Knockback.Observable Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
