--- a/test/knockback_observables/test-legacy.html
+++ b/test/knockback_observables/test-legacy.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback.ViewModel Test Suite</title>
+  <title>Knockback.Observables Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../vendor/knockout-1.2.1.debug.js"></script>
-  <script type="text/javascript" src="../../vendor/underscore.js"></script>
-  <script type="text/javascript" src="../../vendor/backbone-0.9.1.js"></script>
+  <script type="text/javascript" src="../../vendor/underscore-1.1.7.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-0.5.0.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
@@ -25,7 +25,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback.ViewModel Test Suite</h1>
+    <h1 id="qunit-header">Knockback.Observables Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
