--- a/test/knockback_triggered_observable/test-latest.html
+++ b/test/knockback_triggered_observable/test-latest.html
@@ -4,8 +4,8 @@
   <title>Knockback.TriggeredObservable Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../vendor/knockout-2.1.0.debug.js"></script>
-  <script type="text/javascript" src="../../vendor/underscore.js"></script>
-  <script type="text/javascript" src="../../vendor/backbone.js"></script>
+  <script type="text/javascript" src="../../vendor/underscore-latest.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-latest.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
