--- a/test/packaging/test-latest.html
+++ b/test/packaging/test-latest.html
@@ -4,8 +4,8 @@
   <title>Knockback Packaging Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../vendor/knockout-2.1.0.debug.js"></script>
-  <script type="text/javascript" src="../../vendor/underscore.js"></script>
-  <script type="text/javascript" src="../../vendor/backbone.js"></script>
+  <script type="text/javascript" src="../../vendor/underscore-latest.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-latest.js"></script>
 
   <!-- HELPERS -->
   <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
