--- a/test/packaging/test-legacy.html
+++ b/test/packaging/test-legacy.html
@@ -4,8 +4,8 @@
   <title>Knockback Packaging Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../vendor/knockout-1.2.1.debug.js"></script>
-  <script type="text/javascript" src="../../vendor/underscore.js"></script>
-  <script type="text/javascript" src="../../vendor/backbone-0.9.1.js"></script>
+  <script type="text/javascript" src="../../vendor/underscore-1.1.7.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-0.5.0.js"></script>
 
   <!-- HELPERS -->
   <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
