Updated postinstall step

--- a/test/interactive/test-latest.html
+++ b/test/interactive/test-latest.html
@@ -6,10 +6,10 @@
     <title>Knockback Interactive Tests</title>
     <!-- HELPERS -->
     <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
-    <script type="text/javascript" src="../vendor/jquery.tmpl.js"></script>
+    <script type="text/javascript" src="../../vendor/jquery.tmpl.js"></script>
 
     <!-- LIBRARY DEPENDENCIES -->
-    <script type="text/javascript" src="../../vendor/knockout-2.1.0.debug.js"></script>
+    <script type="text/javascript" src="../../vendor/knockout-latest.js"></script>
     <script type="text/javascript" src="../../vendor/underscore-latest.js"></script>
     <script type="text/javascript" src="../../vendor/backbone-latest.js"></script>
     <script type="text/javascript" src="../../vendor/backbone-modelref-latest.js"></script>
