--- a/test/interactive/test-legacy.html
+++ b/test/interactive/test-legacy.html
@@ -6,7 +6,7 @@
     <title>Knockback Interactive Tests</title>
     <!-- HELPERS -->
     <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
-    <script type="text/javascript" src="../vendor/jquery.tmpl.js"></script>
+    <script type="text/javascript" src="../../vendor/jquery.tmpl.js"></script>
 
     <!-- LIBRARY DEPENDENCIES -->
     <script type="text/javascript" src="../../vendor/knockout-1.2.1.debug.js"></script>
