--- a/test/knockback_observables/test-latest.html
+++ b/test/knockback_observables/test-latest.html
@@ -3,7 +3,7 @@
 <head>
   <title>Knockback.Observables Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../vendor/knockout-2.1.0.debug.js"></script>
+  <script type="text/javascript" src="../../vendor/knockout-latest.js"></script>
   <script type="text/javascript" src="../../vendor/underscore-latest.js"></script>
   <script type="text/javascript" src="../../vendor/backbone-latest.js"></script>
 
