--- a/test/backbone_relational/test-latest.html
+++ b/test/backbone_relational/test-latest.html
@@ -3,7 +3,7 @@
 <head>
   <title>Knockback with Backbone.Relational Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../vendor/knockout-2.1.0.debug.js"></script>
+  <script type="text/javascript" src="../../vendor/knockout-latest.js"></script>
   <script type="text/javascript" src="../../vendor/underscore-latest.js"></script>
   <script type="text/javascript" src="../../vendor/backbone-latest.js"></script>
 
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="../../knockback.js"></script>
 
   <!-- HELPERS -->
-  <script type="text/javascript" src="../../vendor/backbone-relational-0.5.0.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-relational-latest.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
