--- a/test/packaging/test-latest.html
+++ b/test/packaging/test-latest.html
@@ -3,7 +3,7 @@
 <head>
   <title>Knockback Packaging Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../vendor/knockout-2.1.0.debug.js"></script>
+  <script type="text/javascript" src="../../vendor/knockout-latest.js"></script>
   <script type="text/javascript" src="../../vendor/underscore-latest.js"></script>
   <script type="text/javascript" src="../../vendor/backbone-latest.js"></script>
 
@@ -15,16 +15,15 @@
   <!-- LIBRARY -->
   <script type="text/javascript">
     window.mock_requires = {};
-    window.mock_requires['underscore'] = window._; delete window['_'];
+    window.mock_requires['underscore'] = {_: window._}; delete window['_'];
     window.mock_requires['backbone'] = window.Backbone; delete window['Backbone'];
     window.mock_requires['knockout'] = window.ko; delete window['ko'];
-
     window.require = function(path) { return window.mock_requires[path]; };
     window.exports = {};
   </script>
   <script type="text/javascript" src="../../knockback.js"></script>
   <script type="text/javascript">
-    window.mock_requires['knockback'] = window['exports']; delete window['exports']
+    window.mock_requires['knockback'] = window['exports']; delete window['exports']; delete window['kb']; delete window['Knockback']
   </script>
 
   <!-- HELPERS -->
