--- a/test/packaging/test-legacy.html
+++ b/test/packaging/test-legacy.html
@@ -15,16 +15,15 @@
   <!-- LIBRARY -->
   <script type="text/javascript">
     window.mock_requires = {};
-    window.mock_requires['underscore'] = window._; delete window['_'];
+    window.mock_requires['underscore'] = {_: window._}; delete window['_'];
     window.mock_requires['backbone'] = window.Backbone; delete window['Backbone'];
     window.mock_requires['knockout'] = window.ko; delete window['ko'];
-
     window.require = function(path) { return window.mock_requires[path]; };
     window.exports = {};
   </script>
   <script type="text/javascript" src="../../knockback.js"></script>
   <script type="text/javascript">
-    window.mock_requires['knockback'] = window['exports']; delete window['exports']
+    window.mock_requires['knockback'] = window['exports']; delete window['exports']; delete window['kb']; delete window['Knockback']
   </script>
 
   <!-- HELPERS -->
