Updated to easy-bake 0.1.4

--- a/test/lodash/test-latest.html
+++ b/test/lodash/test-latest.html
@@ -14,7 +14,8 @@
   <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
   <script type="text/javascript" src="../vendor/qunit/qunit.js"></script>
   <script type="text/javascript" src="../vendor/qunit/jslitmus.js"></script>
-  <script type="text/javascript" src="build/knockback_view_model-test.js"></script>
+  <script type="text/javascript" src="../knockback_observable/build/test.js"></script>
+  <script type="text/javascript" src="../knockback_view_model/build/test.js"></script>
 </head>
 <body>
   <div>
