Made memory management more consistent and added kb.utils.wrapped{Name} to define public interface. Improved statistics.

--- a/test/issues/issue34.html
+++ b/test/issues/issue34.html
@@ -29,6 +29,7 @@
   </ul>
 
   <script src="client-bundle.js"></script>
+  <script src="../../knockback.js"></script>
   <script src="issue34.js"></script>
 
 </body>
