--- a/test/issues/issue35.html
+++ b/test/issues/issue35.html
@@ -47,6 +47,7 @@
   <button data-bind='click: changeInCode'>Change in Code</button>
 
   <script src="client-bundle.js"></script>
+  <script src="../../knockback.js"></script>
   <script src="issue35.js"></script>
 
 </body>
