--- a/test/issues/issue37.html
+++ b/test/issues/issue37.html
@@ -26,6 +26,7 @@
   </div>​
 
   <script src="client-bundle.js"></script>
+  <script src="../../knockback.js"></script>
   <script src="issue37.js"></script>
 
 </body>
