Added test cases and bug fixes related to website

--- a/test/knockback_legacy/test-latest.html
+++ b/test/knockback_legacy/test-latest.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
   <title>Knockback Legacy Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
