--- a/test/knockback_memory_management/test-latest.html
+++ b/test/knockback_memory_management/test-latest.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
   <title>Knockback Memory Management Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
@@ -11,6 +12,8 @@
   <script type="text/javascript" src="../../knockback.js"></script>
 
   <!-- HELPERS -->
+  <script type="text/javascript" src="../../test/_examples/build/_examples.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
   <script type="text/javascript" src="../../vendor/backbone-relational-latest.js"></script>
 
   <!-- TESTS -->
