--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
   <title>Knockback.js Test Suite - All Tests</title>
   <link rel="stylesheet" href="vendor/qunit/qunit.css" type="text/css" media="screen" />
