--- a/test/backbone_relational/test-latest.html
+++ b/test/backbone_relational/test-latest.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <head>
   <title>Knockback with Backbone.Relational Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
@@ -11,6 +12,10 @@
   <script type="text/javascript" src="../../knockback.js"></script>
 
   <!-- HELPERS -->
+  <script type="text/javascript" src="../../test/_examples/build/_examples.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
   <script type="text/javascript" src="../../vendor/backbone-relational-latest.js"></script>
 
   <!-- TESTS -->
