--- a/test/knockback_collection_observable/test-latest.html
+++ b/test/knockback_collection_observable/test-latest.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
   <title>Knockback.CollectionObservable Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
@@ -12,6 +13,9 @@
 
   <!-- HELPERS -->
   <script type="text/javascript" src="../../test/_examples/build/_examples.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
