--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -25,7 +25,6 @@
     <iframe src="knockback_view_model/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_view_model/test-latest.min.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_utils/test-latest.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_observables/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_formatted_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_localized_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_triggered_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
@@ -34,7 +33,7 @@
     <iframe src="knockback_memory_management/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_legacy/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="packaging/test-latest.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="lodash/test.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="lodash/test-latest.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
     <h1 class="qunit-header">Interactive Tests (Legacy)</h1>
@@ -46,7 +45,6 @@
     <iframe src="knockback_collection_observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_view_model/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_utils/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_observables/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_formatted_observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_localized_observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_triggered_observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
