Upgraded Backbone.Relational support to 0.6.0

--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -49,6 +49,7 @@
     <iframe src="knockback_localized_observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_triggered_observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="backbone_modelref/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="backbone_relational/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_legacy/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <!-- KNOCKOUT DIDN'T SUPPORT MODULES -->
     <!-- <iframe src="packaging/test-legacy.html" scrolling="auto" frameborder="0"></iframe> -->
