Compared hand crafted library reduction with original -> original compressed smaller (102 vs 104k)

--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -15,13 +15,13 @@
 </head>
 <body>
   <div class="test-block">
-    <h1 class="qunit-header">Knockback.js - All Tests (Minimal Stack)</h1>
-    <iframe src="minimal-stack/test-latest.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="minimal-stack/test-latest-components.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="minimal-stack/test-bundle-underscore.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="minimal-stack/test-bundle-underscore-components.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="minimal-stack/test-bundle-lodash.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="minimal-stack/test-bundle-lodash-components.html" scrolling="auto" frameborder="0"></iframe>
+    <h1 class="qunit-header">Knockback.js - All Tests (Stack)</h1>
+    <iframe src="full-stack/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="full-stack/test-latest-core.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="full-stack/test-bundle-underscore.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="full-stack/test-bundle-underscore-core.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="full-stack/test-bundle-lodash.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="full-stack/test-bundle-lodash-core.html" scrolling="auto" frameborder="0"></iframe>
   </div>
 
   <div class="test-block">
