--- a/test/full-stack/test-bundle-underscore-core.html
+++ b/test/full-stack/test-bundle-underscore-core.html
@@ -2,10 +2,9 @@
 <html>
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
-  <title>Knockback Minimal Stack (Bundle Lo-Dash) Test Suite</title>
-
+  <title>Knockback Stack (Bundle Underscore) Test Suite</title>
   <!-- LIBRARY -->
-  <script type="text/javascript" src="build/bundle-lodash.js"></script>
+  <script type="text/javascript" src="build/bundle-underscore-core.js"></script>
   <script type="text/javascript" src="../../lib/knockback-statistics.js"></script>
 
   <!-- TESTS -->
@@ -25,7 +24,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback Minimal Stack (Bundle Lo-Dash) Test Suite</h1>
+    <h1 id="qunit-header">Knockback Stack (Bundle Underscore) Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
