--- a/test/full-stack/test-latest-core.html
+++ b/test/full-stack/test-latest-core.html
@@ -2,9 +2,9 @@
 <html>
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
-  <title>Knockback Minimal Stack Test Suite</title>
+  <title>Knockback Stack Test Suite</title>
   <!-- LIBRARY -->
-  <script type="text/javascript" src="../../knockback-minimal-stack.min.js"></script>
+  <script type="text/javascript" src="../../knockback-core-stack.min.js"></script>
   <script type="text/javascript" src="../../lib/knockback-statistics.js"></script>
 
   <!-- HELPERS -->
@@ -29,7 +29,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback Minimal Stack Test Suite</h1>
+    <h1 id="qunit-header">Knockback Stack Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
