--- a/test/full-stack/test-bundle-lodash-core.html
+++ b/test/full-stack/test-bundle-lodash-core.html
@@ -2,16 +2,11 @@
 <html>
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
-  <title>Knockback Minimal Stack (Bundle Lo-Dash) Test Suite</title>
+  <title>Knockback Stack (Bundle Lo-Dash) Test Suite</title>
 
   <!-- LIBRARY -->
-  <script type="text/javascript" src="build/bundle-lodash-components.js"></script>
+  <script type="text/javascript" src="build/bundle-lodash-core.js"></script>
   <script type="text/javascript" src="../../lib/knockback-statistics.js"></script>
-
-  <!-- HELPERS -->
-  <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
-  <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
-  <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
@@ -27,14 +22,10 @@
   <script type="text/javascript" src="../knockback-collection-observable/build/test.js"></script>
   <script type="text/javascript" src="../knockback-observable/build/test.js"></script>
   <script type="text/javascript" src="../knockback-view-model/build/test.js"></script>
-
-  <script type="text/javascript" src="../knockback-formatting/build/test.js"></script>
-  <script type="text/javascript" src="../knockback-localization/build/test.js"></script>
-  <script type="text/javascript" src="../knockback-triggering/build/test.js"></script>
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback Minimal Stack (Bundle Lo-Dash) Test Suite</h1>
+    <h1 id="qunit-header">Knockback Stack (Bundle Lo-Dash) Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
