--- a/components_backbone_relational.html
+++ b/components_backbone_relational.html
@@ -73,7 +73,7 @@
 <p><a href="https://github.com/PaulUithol/Backbone-relational/">Backbone-Relational.js</a> is an extension to Backbone.js that provides a solution to manage dependencies between Models. Knockback.js has been developed with support for relationships in mind.
 
 </p>
-<p>You should take a look at the <a href="tutorial_relational_models">Relational-Model Tutorial</a> and also the <a href="kmalakoff.github.com/knockback-reference-app">Knockback.js Reference App</a> for examples of using relationships in your apps including:
+<p>You should take a look at the <a href="tutorial_relational_models.html">Relational-Model Tutorial</a> and also the <a href="kmalakoff.github.com/knockback-reference-app">Knockback.js Reference App</a> for examples of using relationships in your apps including:
 
 </p>
 <ul>
