--- a/components_backbone_relational.html
+++ b/components_backbone_relational.html
@@ -47,20 +47,6 @@
                 </li>
                 <li><a href="https://github.com/kmalakoff/knockback/wiki/Release-Notes">Release Notes</a></li>
               </ul>
-              <div id="script_language" class="pull-right">
-                <div class="separator">
-                  <div class="selection codestyle">
-                    <div class="option">
-                      <input id="cs-cs" type="radio" name="codestyle" value="cs" class="auto"/>
-                      <label for="cs-cs">CS</label>
-                    </div>
-                    <div class="option">
-                      <input id="cs-js" type="radio" name="codestyle" value="js"/>
-                      <label for="cs-js">JS</label>
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -73,13 +59,13 @@
 <p><a href="https://github.com/PaulUithol/Backbone-relational/">Backbone-Relational.js</a> is an extension to Backbone.js that provides a solution to manage dependencies between Models. Knockback.js has been developed with support for relationships in mind.
 
 </p>
-<p>You should take a look at the <a href="tutorial_relational_models.html">Relational-Model Tutorial</a> and also the <a href="kmalakoff.github.com/knockback-reference-app">Knockback.js Reference App</a> for examples of using relationships in your apps including:
+<p>You should take a look at the <a href="tutorial_relational_models.html">Relational-Model Tutorial</a> and also the <a href="http://kmalakoff.github.com/knockback-reference-app">Knockback.js Reference App</a> for examples of using relationships in your apps including:
 
 </p>
 <ul>
 <li>rendering custom Views for each relationship</li>
 <li>selecting relationships using an HTML select element and Knockout.js</li>
-<li>embedding sliding Panes for each relationship using <a href="https://github.com/kmalakoff/knockback-navigators">Knockback-Navigators.js</a></li>
+<li>embedding sliding Panes for each relationship using <a href="http://kmalakoff.github.com/knockback-navigators">Knockback-Navigators.js</a></li>
 </ul>
 <p>Knockback.js really excels at simplifying relationship Views!</p>
 
