--- a/app_knockback_reference.html
+++ b/app_knockback_reference.html
@@ -51,20 +51,6 @@
                 </li>
                 <li><a href="https://github.com/kmalakoff/knockback/wiki/Release-Notes">Release Notes</a></li>
               </ul>
-              <div id="script_language" class="pull-right">
-                <div class="separator">
-                  <div class="selection codestyle">
-                    <div class="option">
-                      <input id="cs-cs" type="radio" name="codestyle" value="cs" class="auto"/>
-                      <label for="cs-cs">CS</label>
-                    </div>
-                    <div class="option">
-                      <input id="cs-js" type="radio" name="codestyle" value="js"/>
-                      <label for="cs-js">JS</label>
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -75,7 +61,7 @@
       </header>
       <content class="page">
         <section><h1>Knockback.js Reference App</h1>
-<p><a href="kmalakoff.github.com/knockback-reference-app">Try the demo</a>
+<p><a href="http://kmalakoff.github.com/knockback-reference-app">Try the demo</a>
 
 </p>
 <h2>Combining Backbone.js and Knockout.js with Knockback.js</h2>
@@ -186,7 +172,7 @@ ko.releaseNode(statistics_el);</code></pre>
     }));
   });</code></pre>
 <h1>Application Architecture</h1>
-<p>I try to keep directories organized like in <a href="">ToDoApp</a> and <a href="">Brunch</a>:
+<p>I try to keep directories organized like in <a href="http://addyosmani.github.com/todomvc/">TodoMVC</a> and <a href="http://brunch.io/">Brunch</a>:
 
 </p>
 <pre><code>- app
