--- a/tutorial_kb_localized_observable.html
+++ b/tutorial_kb_localized_observable.html
@@ -51,7 +51,7 @@
                 </li>
                 <li><a href="https://github.com/kmalakoff/knockback/wiki/Release-Notes">Release Notes</a></li>
               </ul>
-              <div id="script_language" class="pull-right">
+              <div id="script_language">
                 <div class="separator">
                   <div class="selection codestyle">
                     <div class="option">
